# Employee-Management

./: .env  Readme.md  config.py  config_template  main.py  pyproject.toml
models/: admin.py  device.py  devicehistory.py  employee.py
routes/: admin.py  auth.py  device.py  employee.py
utils/: auth.py  jwt.py  middleware.py
